--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,42 @@
-* {
 
-}
 
 body {
-    height: 900px;
+    height: 1900px;
     margin: 0px;
     padding: 0px;
     width: 100%;
+}
+.gallery
+{
+    display: grid; 
+grid-template-columns: repeat(2, 1fr); 
+grid-template-rows: repeat(2, 1fr); 
+grid-column-gap: 0px;
+grid-row-gap: 0px; 
+margin: 80px;
+align-items: center;
+align-content: space-evenly;
+}
+.product
+{
+    width: 200px;
+    text-align: center;
+    
+}
+h2{
+    font-family:Helvetica;
+    font-size: 30px;
+    text-align: center;
+    background-color: rgba(255, 185, 88, 0.643);
+    padding: 10px;
+    color: rgb(255, 255, 255);
+    margin: 0px;
+}
+.model
+{
+background-color: rgb(244, 241, 241);
+border-radius: 10px;
+box-shadow: 2px;
+height: 300px;
+    
 }
