--- a/css/style.css
+++ b/css/style.css
@@ -8,20 +8,23 @@ body {
 }
 .gallery
 {
-    display: grid; 
+display: grid; 
 grid-template-columns: repeat(2, 1fr); 
 grid-template-rows: repeat(2, 1fr); 
 grid-column-gap: 0px;
 grid-row-gap: 0px; 
-margin: 80px;
+margin: 200px;
 align-items: center;
-align-content: space-evenly;
+align-content:space-evenly;
 }
 .product
 {
-    width: 200px;
+    width: 300px;
     text-align: center;
-    
+    padding: 50px;
+    border-radius: 10px;
+    border: 3px solid #6f7ff6;
+    margin-bottom: 20px;
 }
 h2{
     font-family:Helvetica;
@@ -34,11 +37,11 @@ h2{
 }
 .model
 {
-background-color: rgb(244, 241, 241);
-border-radius: 10px;
+background-color: rgb(196, 196, 196);
+border-radius: 15px;
 box-shadow: 2px;
 height: 300px;
-    
+
 }
 .annotation{
     background-color: #888888;
@@ -58,7 +61,7 @@ height: 300px;
     display: block;
     font-family: Futura, Helvetica Neue, sans-serif;
     font-size: 12px;
-    font-weight: 700;
+    font-weight: 100;
     max-width: 128px;
     overflow-wrap: break-word;
     padding: 0.5em 1em;
@@ -66,6 +69,7 @@ height: 300px;
     width: max-content;
     height: max-content;
     transform: translate3d(-50%, -50%, 0);
+    
   }
   .hotspot
   {
@@ -87,4 +91,39 @@ height: 300px;
     height: max-content;
     transform: translate3d(-50%, -50%, 0);
 
+  }
+   
+ 
+    .cart {
+        font-size: 18px;
+        display: inline-block;
+        outline: 0;
+        border: 0;
+        cursor: pointer;
+        will-change: box-shadow,transform;
+        background: radial-gradient( 100% 100% at 100% 0%, #89E5FF 0%, #5468FF 100% );
+        box-shadow: 0px 0.01em 0.01em rgb(45 35 66 / 40%), 0px 0.3em 0.7em -0.01em rgb(45 35 66 / 30%), inset 0px -0.01em 0px rgb(58 65 111 / 50%);
+        padding: 0 2em;
+        border-radius: 0.3em;
+        color: #fff;
+        height: 2.6em;
+        text-shadow: 0 1px 0 rgb(0 0 0 / 40%);
+        transition: box-shadow 0.15s ease, transform 0.15s ease;
+      }
+      
+      .cart:hover {
+        box-shadow: 0px 0.1em 0.2em rgb(45 35 66 / 40%), 0px 0.4em 0.7em -0.1em rgb(45 35 66 / 30%), inset 0px -0.1em 0px #3c4fe0;
+        transform: translateY(-0.1em);
+      }
+      
+      .cart:active {
+        box-shadow: inset 0px 0.1em 0.6em #3c4fe0;
+        transform: translateY(0em);
+      }
+  .footer
+  {
+    background-color: black;
+    padding: 15px;
+    color: white;
+    text-align: center;
   }
